# yarb

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  c  docker-compose.yml  g  prometheus.yml  release  release2  t2
backend-axum/: .dockerignore  Cargo.toml  Dockerfile  r
frontend-dioxus/: .gitignore  Cargo.toml  Dioxus.toml  b  package-lock.json  package.json  playwright.config.ts  pwt  ssl  tailwind.config.js  tailwind_input.css  tw
frontend-dioxus/assets/: tailwind.css
shared-backfront/: Cargo.toml  r
