[package]
name = "frontend-dioxus"
version = "0.1.0"
authors = ["Chris Rogus <rogusdev@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
