[package]
name = "shared-backfront"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
fast32 = { version = "1.0.3", features = ["uuid"] }
postgres-types = { version = "0.2.9", features = ["derive"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"], optional = true }
uuid = { version = "1.15.1", features = ["serde"] }
uuid32 = "1.0.0"

[features]
default = []
db = ["dep:tokio-postgres", "dep:postgres-types", "uuid32/postgres"]
